# llm

./: .gitignore  README.md  deps.edn  gpt-20b.py  inference_gemma.py  inference_gemma3.py  inference_smoolm.py  pyproject.toml
.devcontainer/: devcontainer.json
java/: GPT2Tokenizer.java  HalfPrecisionFloat.java  TryOnnx.java
src/: dd_onnx.clj  dd_onnx_oss_gpt_20b.clj  gemma3_test.clj  gpt2_cuda_test.clj  huggingface.clj  inference_gemma.clj  inference_gemma2.clj  inference_gemma3.clj  inference_gpt2.clj  inference_java.clj  inference_oss_gpt_20b.clj  inference_smollm.clj  inference_smollm2.clj
src/scicloj/llm/: generate.clj  inference_dd.clj
src/uncomplicate/diamond/internal/onnxrt/: model.clj
test/scicloj/llm/: generate_test.clj
trials/: cuda.clj  inference_gemma3_dd.clj  inference_gemma3_dd_working.clj  inference_smolllm_dd.clj  inference_smollm.clj
